# platformer_game_cpp_sdl2

./: .gitignore  CMakeLists.txt
game_data/level_1/: shooter.txt  skeleton.txt  slime.txt
game_data/level_2/: shooter.txt  skeleton.txt  slime.txt
game_images/enemy/shooter/death/: data.txt
game_images/enemy/shooter/hurt/: data.txt
game_images/enemy/shooter/idle/: data.txt
game_images/enemy/shooter/shot_attack/: data.txt
game_images/enemy/shooter/walk/: data.txt
game_images/enemy/skeleton/attack/: data.txt
game_images/enemy/skeleton/death/: data.txt
game_images/enemy/skeleton/hurt/: data.txt
game_images/enemy/skeleton/idle/: data.txt
game_images/enemy/skeleton/walk/: data.txt
game_images/enemy/slime/: data.txt
game_images/enemy/slime/attack/: data.txt
game_images/enemy/slime/death/: data.txt
game_images/enemy/slime/walk/: data.txt
game_images/hero/skin_green_knight/death/: data.txt
game_images/hero/skin_green_knight/hurt/: data.txt
game_images/hero/skin_green_knight/jump/: data.txt
game_images/hero/skin_knight/attack_1/: data.txt
game_images/hero/skin_knight/attack_2/: data.txt
game_images/hero/skin_knight/attack_3/: data.txt
game_images/hero/skin_knight/death/: data.txt
game_images/hero/skin_knight/fall/: data.txt
game_images/hero/skin_knight/hurt/: data.txt
game_images/hero/skin_knight/idle/: data.txt
game_images/hero/skin_knight/jump/: data.txt
game_images/hero/skin_knight/run/: data.txt
game_images/hero/skin_knight/walk/: data.txt
game_images/hero/skin_red_knight/attack_1/: data.txt
game_images/hero/skin_red_knight/attack_3/: data.txt
game_images/hero/skin_red_knight/idle/: data.txt
game_images/shots/homing_shot/death/: data.txt
game_images/shots/homing_shot/fly/: data.txt
include/: application.h  background.h  direction.h  enemy_base.h  enemy_shooter.h  enemy_skeleton.h  enemy_slime.h  font.h  game.h  global_var.h  hero.h  init_application.h  level.h  menu.h  other_function.h  platforms.h  sdl.h  shot.h  texture.h
maps/: map_1.txt  map_2.txt  map_test.txt
src/: application.cpp  background.cpp  enemies.cpp  enemy_shooter.cpp  enemy_skeleton.cpp  enemy_slime.cpp  font.cpp  game.cpp  global_var.cpp  hero.cpp  init_application.cpp  level.cpp  main.cpp  menu.cpp  other_function.cpp  platforms.cpp  shot.cpp  texture.cpp
(+2 files in other folders)
